# askmany-monitor

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/cron/: collector.py
backend/app/routers/: dashboard.py
backend/app/services/: alert_engine.py  cls_collector.py  dashboard.py
backend/scripts/: backfill.py
backend/tests/: conftest.py  test_alert_engine.py  test_cls_collector.py  test_dashboard_api.py  test_iter2_api.py  test_models.py
db/: init.sql
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: dashboard.ts
frontend/src/components/: AlertBanner.tsx  BlockRateChart.tsx  DirectionChart.tsx  EventCountChart.tsx  EventTable.tsx  KpiCards.tsx  Layout.tsx  RiskTypeTable.tsx  TimeRangeSelector.tsx  UserUvChart.tsx
frontend/src/constants/: colors.ts
frontend/src/context/: DrilldownContext.tsx  TimeRangeContext.tsx
frontend/src/hooks/: mockData.ts  useDashboard.ts
frontend/src/pages/: ComingSoonPage.tsx  ForbiddenWordPage.tsx  SettingsPage.tsx
frontend/src/types/: dashboard.ts
frontend/tests/: Charts.test.tsx  KpiCards.test.tsx
